# MathDeck

./: .gitignore  .replit  README.md  mathdeck.cabal  replit.md
attached_assets/: Pasted-I-went-through-the-CSV-and-there-are-several-systematic_1782547151556.txt  Pasted-Mathematical-expressions-MUST-use-MathJax-Example-x-2-3_1782866360489.txt  Pasted-This-is-a-massive-improvement-I-d-actually-call-this-th_1782547579503.txt  Pasted-This-is-noticeably-better-Honestly-this-is-the-first-ve_1782869790624.txt  Pasted-cabal-build-Resolving-dependencies-Build-profile-w-ghc-_1782546637965.txt
src/: CSV.hs  Calculus.hs  Generator.hs  Limits.hs  Main.hs  Polynomial.hs  PrettyPrint.hs  SignChart.hs  Types.hs
