cabal-version:      2.4
name:               mathdeck
version:            0.1.0.0
synopsis:           Generate unlimited calculus and algebra Anki cards
description:        MathDeck generates mathematically consistent exercises for Anki flashcards.
license:            AGPL-3.0-only
license-file:       LICENSE
author:             JoRios1006
maintainer:         JoRios1006
category:           Education
build-type:         Simple

executable mathdeck
    main-is:          Main.hs
    hs-source-dirs:   src
    other-modules:
        Types
        Polynomial
        Calculus
        SignChart
        Limits
        PrettyPrint
        Generator
        CSV
    build-depends:
        base ^>=4.20.0.0,
        time ^>=1.12
    default-language: GHC2021
